1.0.1
  13-01-30
  Improvemnet
  * #i0005: Porperty enabled is removed
            Effected files:
            * lib/typoscript/class.tx_flipit_typoscript.php
            * static
              * constants.txt
              * setup.txt
            * ext_tables.php
            * ext_tables.sql
            * locallang_db.xml
  * #i0004: Flexform got property "Plugin check"
            Effected files:
            * ext_tables.php
            * ext_tables.sql
            * locallang_db.xml
  * #i0003: Palettes for the flexform

1.0.0
  13-01-29
  Feature
  * #44896: Interface for third party extensions
            Effected file:
            * lib/typoscript/class.tx_flipit_typoscript.php
            * static
              * constants.txt
              * setup.txt

0.0.5
  13-01-18
  Bugfix
  * #i0002: includeLibs.tx_browser_cssstyledcontent -> includeLibs.tx_flipit_cssstyledcontent
            Effected file:
            * static/setup.txt

0.0.4
  13-01-16
  Improvement
  * #i0001: Windows-Server

0.0.3
  13-01-07
  Development
  * #44395: AJAX page object for fancybox

0.0.1
  12-12-28
  Initial release
  Dirk Wildt  http://wildt.at.die-netzmacher.de